--- a/calculator-playbook.yml
+++ b/calculator-playbook.yml
@@ -1,7 +1,7 @@
 
 ---
 - name: Copy jar file to remoter server
-  hosts: remoteserver
+  hosts: all
   tasks:
     - copy:
         src: ./target/calculator-devops-1.0-SNAPSHOT-jar-with-dependencies.jar
